--- a/css/style.css
+++ b/css/style.css
@@ -1581,3 +1581,16 @@ iframe {
     width: 8.33333333%;
   }
 }
+.embed-container {
+    position: relative;
+    padding-bottom: 56%;
+    height: 0;
+    overflow: hidden;
+}
+.embed-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
