--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,56 @@ article.blog .vcard * {
   }
 }
 /*==========================================================*/
+/* Portfolio copy
+/*==========================================================*/
+article.portfoliooff .image {
+  display: block;
+  position: relative;
+}
+article.portfoliooff .image:before {
+  position: absolute;
+  width: 32px;
+  height: 28px;
+  top: 40%;
+  left: 50%;
+  margin: -14px 0 0 -16px;
+  background: url(../img/svg/icon-fullscreen.svg) no-repeat;
+  content: '';
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+article.portfoliooff .image:hover:before {
+  top: 50%;
+  opacity: 1;
+}
+article.portfoliooff .image:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  content: '';
+  opacity: 0;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+}
+article.portfoliooff .image:hover:after {
+  opacity: 1;
+}
+article.portfoliooff .inner {
+  padding: 20px 40px;
+}
+article.portfoliooff h3 {
+  font-size: 24px;
+}
+@media (max-width: 991px) {
+  article.portfoliooff .inner {
+    text-align: center;
+  }
+}
+/*==========================================================*/
 /* Portfolio item
 /*==========================================================*/
 article.portfolio .image {
